fix scroll on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,21 @@ body {
   @apply bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))] text-white;
 }
 
+@media only screen and (max-width: 600px) {
+  html {
+    overflow: hidden;
+    width: 100%;
+  }
+
+  body {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+  }
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
